OO_Coursework Final/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\krimb\Documents\OO Coursework
-d
C:\Users\krimb\Documents\OO Coursework\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\krimb\Documents\OO Coursework\Train_Station.java
<---- end of javadoc command ---->
Loading source file C:\Users\krimb\Documents\OO Coursework\Train_Station.java...
C:\Users\krimb\Documents\OO Coursework\Train_Station.java:11: error: ';' expected
    private String Station_Name = null 
                                      ^
C:\Users\krimb\Documents\OO Coursework\Train_Station.java:12: error: ';' expected
    private String Station_ID = null
                                    ^
2 errors
